# cvpr_clvision_challenge

./: naive_baseline_ted.py  pyproject.toml  run_nc_ted.ipynb  run_nc_ted.py  runbaseline_ted.ipynb
continuum/: baseline.py  charting.py
continuum/output/: 20201005_lr0001_e8_wd00001  20201006_rn101_lr00001_me8_wd000001
